Alignment and color fix

--- a/src/app/main-layout/main-layout.component.scss
+++ b/src/app/main-layout/main-layout.component.scss
@@ -21,5 +21,6 @@
   width: 64px;
   top: 0;
   left: 0;
-  background-color: #154c79;
+  // background-color: #154c79;
+  background-color: #32408f;
 }
